--- a/resources/views/dashboard/gallery.edge
+++ b/resources/views/dashboard/gallery.edge
@@ -88,10 +88,10 @@
             <div class="row no-gutters slider-text align-items-center">
       <div class="col-md-9 ftco-animate">
         <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>Gallery</span></p>
-        <h1 class="mb-3 bread">Galleries</h1>
+        <h1 class="mb-3 bread">Bulk Galleries</h1>
         <input type="hidden" value={{auth.user.name}} id="name"/>
         <input type="hidden" value={{auth.user.admin}} id="admin" />
-        <p>paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+        <p>Bulk Galleries are sorted year-wise or by occasion.</p>
       </div>
     </div>
         </div>
