--- a/resources/views/master.edge
+++ b/resources/views/master.edge
@@ -2,6 +2,8 @@
 <html lang="en">
     @component('partials.head', {title})
     @endcomponent 
+    @component('partials.loader')
+    @endcomponent 
   <body class="">
     <div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
