--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7329,7 +7329,7 @@ h1, h2, h3, h4, h5,
   right: 0;
   overflow-y: hidden;
   z-index: 1001;
-  background: yellowgreen;
+  background: white;
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
   -webkit-transition: all 0.5s ease;
@@ -7494,11 +7494,11 @@ h1, h2, h3, h4, h5,
     display: inline-block;
     width: 30px;
     height: 2px;
-    color: #000000;
+    color: red;
     font: bold 14px/.4 Helvetica;
     text-transform: uppercase;
     text-indent: -55px;
-    background: #000000;
+    background: red;
     -webkit-transition: all .2s ease-out;
     -o-transition: all .2s ease-out;
     transition: all .2s ease-out; }
@@ -7506,7 +7506,7 @@ h1, h2, h3, h4, h5,
       content: '';
       width: 30px;
       height: 2px;
-      background: #000000;
+      background: red;
       position: absolute;
       left: 0;
       -moz-transition: all 0.2s ease;
