--- a/resources/views/dashboard/gallery/bulkGallery.edge
+++ b/resources/views/dashboard/gallery/bulkGallery.edge
@@ -89,7 +89,7 @@
         <h1 class="mb-3 bread">Bulk gallery - {{year}}</h1>
         <input type="hidden" value={{auth.user.name}} id="name"/>
         <input type="hidden" value={{auth.user.admin}} id="admin" />
-        <p>paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+        <p>Display Description</p>
       </div>
     </div>
         </div>
